tests/e2e/try_scope_invalid3.error
Error: syntax error in story at line 6, column 3

6|      a += 1
        ^

E0101: Variable `a` has not been defined.
