tests/e2e/try_scope_invalid3.story
try
  a = 0
catch
  b = 42
finally
  a += 1
